<resources>
    <string name="app_name">IDoTheCooking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IDoTheCooking</string>
    <string name="nav_header_subtitle">Manage your cooking needs in one place</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_internal_name">IDoTheCooking</string>
    <string name="menu_home">Home</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_shopping_lists">Shopping Lists</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="title_activity_recipe_name">Recipe - {0}</string>
    <string name="recipe_main_fragment_label">Recipe Info</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="adj_srv_size">Adjust Serving Size</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="import_complete">Import Complete</string>
    <string name="import_recipe_complete">Import [{0}] Complete</string>
    <string name="import_error_recipe_exists">Recipe [{0}] already exists</string>
    <string name="import_error_recipe">Error saving recipe [{0}]</string>
    <string name="import_error_shopping_list">Error saving shopping list [{0}]</string>
    <string name="import_error_invalid_file">Invalid backup file</string>
    <string name="import_from_library">Select From Library…</string>
    <string name="do_not_show_about_at_startup">Don\'t show at startup</string>
    <string name="open_about_at_startup">Open About Dialog at Startup</string>
    <string name="show_sample_library">Show Sample Recipe Library</string>
    <string name="general_setting">General Settings</string>
    <string name="save_as_prompt">Please choose a new name</string>
    <string name="exit_without_save">You\'ve made changes.  Exit without saving?</string>
    <string name="exit_with_save">You\'ve made changes. Save before exiting?</string>
    <string name="exit_with_save_auto_save"><![CDATA[You\'ve made changes. Save before exiting? <b>(Enable AutoSave in Settings to avoid manually saving changes.)</b>]]></string>
    <string name="delete_confirmation">Confirm delete of recipe: {0}</string>
    <string name="save_success">Update successful</string>
    <string name="overview_tab">Overview</string>
    <string name="ingredients_tab">Ingredients</string>
    <string name="instructions_tab">Instructions</string>
    <string name="suggestions_tab">Suggestions</string>
    <string name="home_recipes_title">Recipes</string>
    <string name="home_recently_updated">Recently updated:</string>
    <string name="home_create_new">Create New</string>
    <string name="home_view_all">View All</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="home_favorites">Favorites:</string>
    <string name="recipe_main">Name</string>
    <string name="recipe_description">Brief Description (optional)</string>
    <string name="recipe_image">Set Image</string>
    <string name="recipe_servings">Servings</string>
    <string name="recipe_categories">Categories</string>
    <string name="recipe_select_categories">Select Categories</string>
    <string name="recipe_name_missing">Name is required</string>
    <string name="recipe_name_must_be_unique">Name must be unique</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="ingredient_amount_hint">#</string>
    <string name="ingredient_unit_hint">Units</string>
    <string name="ingredient_name_hint">Name</string>
    <string name="ingredient_edit_amount">Amount</string>
    <string name="ingredient_edit_servings">Servings</string>
    <string name="ingredient_edit_name">Name</string>
    <string name="ingredient_edit_title">Edit Ingredient</string>
    <string name="ingredient_new_title">New Ingredient</string>
    <string name="favorite">Favorite</string>
    <string name="direction_content_hint">Details</string>
    <string name="instructions_content_hint">Instruction details</string>
    <string name="create_recipe_title">Create New Recipe</string>
    <string name="create_recipe_msg">Create a new recipe</string>
    <string name="create_from_scratch">Create from scratch</string>
    <string name="create_from_scratch_desc">Empty recipe</string>
    <string name="rename_recipe_before_save">A recipe of the same name already exists. Please enter a new name.</string>
    <string name="create_category_title">Category</string>
    <string name="create_category_msg">Create a new category</string>
    <string name="create_shopping_list_title">Create New Shopping List</string>
    <string name="shopping_list_edit_title">Edit Shopping List Item</string>
    <string name="shopping_list_new_title">New Shopping List Item</string>
    <string name="shopping_list_import">Import from recipe</string>
    <string name="update_category_title">Category</string>
    <string name="update_category_msg">Update a category</string>
    <string name="filter_sort_by">Sort By</string>
    <string name="filter_sort_by_name">Name</string>
    <string name="filter_sort_by_newest">Newest</string>
    <string name="filter_sort_by_recently_updated">Recently Updated</string>
    <string name="filter_sort_by_calories">Calories</string>
    <string name="filter_on_categories">Filter on Categories</string>
    <string name="direction_edit_title">Edit Instruction</string>
    <string name="direction_new_title">New Instruction</string>
    <string name="categories_dlg_title">Select Category</string>
    <string name="categories_dlg_clear_all">Clear All</string>
    <string name="category_referenced_warning">This category is referenced in {{0}} recipes. Do you want to delete it anyway?</string>
    <string name="category_create_new"><![CDATA[<create new>]]></string>
    <string name="recipe_sent_success">Recipe \'{{0}}\' Sent</string>
    <string name="recipe_sent_failed">Recipe \'{{0}}\' Failed</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_activity_shopping_list_name">Shopping List - {0}</string>
    <string name="adjust_servings_title">Adjust Serving Size</string>
    <string name="adjust_servings_error">Recipe serving size must be specified in order to adjust ingredients properly</string>
    <string name="select_phone_number">Select phone number</string>
    <string name="search_recipe_library">Search Recipe Library</string>
    <string name="selection_required">Please select an option</string>
    <string name="export_to_shopping_list">Export to shopping list</string>
    <string name="success_export_to_shopping_list">Successfully exported items to selected shopping list</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="import_from_recipe">Import from recipe</string>
    <string name="import_from_list">Import from shopping list</string>
    <string name="home_header">Home Screen</string>
    <string name="sync_header">Sync</string>
    <string name="auto_save_header">AutoSave</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="auto_save_lists_title">Enable For Shopping Lists</string>
    <string name="recent_items_count">Recently Updated items max.</string>
    <string name="recent_items_count_summary">Used for recipes and shopping lists</string>
    <string name="exception_generic">There was an error trying to save this record.</string>
    <string name="exception_duplicate_name">You cannot use a duplicate name. Please try again with a unique name.</string>
    <string name="image_library_title">Select from the library</string>
    <string name="detailed_measurements">Detailed Measurements</string>
    <string name="image_menu_image_gallery">Image Gallery</string>
    <string name="image_menu_files">Files &amp; Downloads</string>
    <string name="image_menu_take_picture">Take A Picture</string>
    <string name="image_menu_image_library">Image Library</string>
    <string name="image_menu_clear">Clear</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="recipe_generator">Recipe Creator</string>
    <string name="recipe_generate">Search</string>
    <string name="generated_from_openai">Generated from OpenAi</string>
    <string name="new_ai_recipe">New AI Recipe</string>
    <string name="description_missing">Description required</string>
    <string name="description_hint">Describe the recipe you are looking for…</string>
    <string name="import_recipe">Import</string>
    <string name="generate">Generate</string>
    <string name="generate_using_ai">Create using AI</string>
    <string name="enhance_using_ai">Enhance using AI</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="questionnaire_description">Try the questionnaire to guide you through options.</string>
    <string name="generate_description">Or, describe what you\'re looking for…</string>
    <string name="helper_desc_hint">Explain what kind of suggestions you are looking for</string>
    <string name="helper_button_text">Get Suggestions</string>
    <string name="helper_prompt_title">Add this suggestion to your recipe?</string>
    <string name="llm_failure">The AI portal is down, please try again later. If it persists, check for an update.</string>
    <string name="backup_restore_title">Backup and Restore</string>
    <string name="backup_title">Backup</string>
    <string name="restore_title">Restore</string>
    <string name="data_backup_button">Backup Data</string>
    <string name="data_backup_overview">Backup recipes, categories and shopping lists to your Google Drive. It will be saved as a JSON file and can read in any editor.</string>
    <string name="data_restore_button">Restore Data</string>
    <string name="data_restore_overview">Restore backed up data from JSON file on your Google Drive or device</string>
    <string name="alert_data_backup_title">Backup Your Data</string>
    <string name="alert_data_backup_message">All your recipes, categories and lists are currently only stored locally on your device. Protect your data, and make it shareable across devices, by backing it up to a file on your cloud drive.</string>
    <string name="alert_data_backup_button">Start</string>
    <string name="alert_data_backup_later">Later</string>
    <string name="alert_data_backup_stop">Stop bugging me</string>
    <string name="alert_data_backup_enabled">Backup Alert Reminder</string>
    <string name="alert_data_backup_goto">Go to Backup</string>
    <string name="about_subheading">For those who do the cooking</string>
</resources>