<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/home_header">

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <SeekBarPreference
            android:key="recent_items_count2"
            android:title="@string/recent_items_count"
            android:summary="@string/recent_items_count_summary"
            android:defaultValue="3"
            android:max="10"
            app:showSeekBarValue="true"
            app:min="2" />

<!--        <ListPreference-->
<!--            app:defaultValue="3"-->
<!--            app:entries="@array/recent_items_count_entries"-->
<!--            app:entryValues="@array/recent_items_count_values"-->
<!--            app:key="recent_items_count"-->
<!--            app:title="Recent items displayed count"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/auto_save_header">

        <SwitchPreferenceCompat
            app:key="auto_save_lists"
            app:title="@string/auto_save_lists_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_setting">
        <SwitchPreferenceCompat
            app:key="auto_launch_about"
            app:defaultValue="true"
            app:title="@string/open_about_at_startup" />
        <SwitchPreferenceCompat
            app:key="show_sample_library"
            app:defaultValue="false"
            app:title="@string/show_sample_library" />
        <SwitchPreferenceCompat
            app:key="show_backup_reminder"
            app:defaultValue="true"
            app:title="@string/alert_data_backup_enabled" />
    </PreferenceCategory>

</PreferenceScreen>