<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:id="@+id/item_save"
        app:showAsAction="always" />
    <item
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cancel"
        android:id="@+id/item_cancel"
        app:showAsAction="always" />
    <item
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/print"
        android:id="@+id/item_print"
        app:showAsAction="never" />
    <item
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        android:id="@+id/item_share"
        app:showAsAction="never" />
    <item
        android:orderInCategory="100"
        android:title="@string/shopping_list_import"
        android:id="@+id/import_from_recipe"
        app:showAsAction="never" />
    <item
        android:orderInCategory="100"
        android:title="@string/export_to_shopping_list"
        android:id="@+id/export_to_list"
        app:showAsAction="never" />
</menu>