<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@mipmap/recipes_icon"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@mipmap/category_icon"
            android:title="@string/recipe_categories" />
        <item
            android:id="@+id/nav_shopping_lists"
            android:icon="@mipmap/checklist_icon"
            android:title="@string/menu_shopping_lists" />
        <item
            android:id="@+id/nav_recipe_generator"
            android:icon="@mipmap/generative"
            android:title="@string/recipe_generator" />
    </group>
</menu>