<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dbeceb"
            android:padding="4dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/sortName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_name"/>

            <RadioButton
                android:id="@+id/sortCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_newest"/>

            <RadioButton
                android:id="@+id/sortUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_recently_updated"/>

            <!--RadioButton
                android:id="@+id/sortCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_calories"/-->
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_on_categories"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/categoriesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"/>

    </LinearLayout>
</ScrollView>