<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.recipe.RecipeMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNameBox"
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/recipe_main">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:background="@color/white"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/recipe_description">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDesc"
                android:background="@color/white"
                android:inputType="textMultiLine|textCapSentences"
                android:gravity="top"
                android:minLines="3"
                android:maxLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="4dp">
                <TextView
                    android:text="@string/recipe_image"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/editImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </LinearLayout>
            <NumberPicker
                android:id="@+id/editServings"
                android:background="@color/white"
                android:layout_width="50dp"
                android:layout_marginStart="26dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:text="@string/recipe_servings"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:text="@string/recipe_categories"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/categoriesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="16dp"
            android:hint="@string/recipe_select_categories"
            android:padding="12dp"
            app:drawableRightCompat="@android:drawable/arrow_down_float" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>