<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="14dp"
    tools:context=".ui.home.HomeFragment"
    android:isScrollContainer="true"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/alipay_login"
        style="@style/homePanel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/recipe_icon"
                android:layout_width="100dp"
                android:layout_height="80dp"/>

            <TextView
                style="@style/homeRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/home_recipes_title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/createNewRecipe"
                android:text="@string/home_create_new"
                style="@style/homeAddButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewRecipes"
                android:text="@string/home_view_all"
                style="@style/homeListButton"/>
        </LinearLayout>
        <TextView
            style="@style/homeRecipeRecentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/home_recently_updated" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipeHolder"
            style="@style/recipeHolder"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/sl"
                android:layout_width="100dp"
                android:layout_height="80dp"/>

            <TextView
                style="@style/homeListsTitle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/menu_shopping_lists" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/createNewList"
                android:text="@string/home_create_new"
                style="@style/homeAddButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewShoppingLists"
                android:text="@string/home_view_all"
                style="@style/homeListButton"/>
        </LinearLayout>
        <TextView
            style="@style/homeRecipeRecentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/home_recently_updated" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listsHolder"
            style="@style/recipeHolder"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>